# nrf-double-bank

./: .gitignore  CMakeLists.txt  Kconfig  README.md  patches.yml  pm_static_nrf9151dk_nrf9151_ns.yml  prj.conf  sysbuild.cmake  sysbuild.conf
bank0/: prj.conf
bank0/src/: firmware_update.c
bank1/: CMakeLists.txt
bank1/src/: firmware_update.c  main.c
mcuboot_hooks/: CMakeLists.txt
mcuboot_hooks/src/: boot_hooks.c
mcuboot_hooks/zephyr/: module.yml
patches/nrf/: 0001-lwm2m-adv-fota-dual-bank.patch  0001-lwm2m-firmware-double-bank-support.patch
patches/zephyr/: 0001-mcuboot-double-bank-support.patch
src/: main.c
sysbuild/: mcuboot.conf  mcuboot.overlay
